--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section class="hero">
         <div class="container">
-            <h2>We Bring Your Electronics Back to Life</h2>
+            <h2>Feel the Chnage</h2>
             <p>Specialized in microchip and board-level repairs</p>
             <a href="#contact" class="btn">Get a Free Quote</a>
         </div>
