--- a/index.html
+++ b/index.html
@@ -1,68 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChipFix - Chip Repair Experts</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Chip Illusions | Windshield Repair Machines</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>ChipFix</h1>
-            <nav>
-                <ul>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#about">About Us</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  
+<!-- Navigation -->
+ <nav class="navbar">
+  <div class="logo">Chip Illusions</div>
+  <button class="menu-toggle" id="menuToggle">&#9776;</button>
+  <ul class="nav-links" id="navLinks">
+    <li><a href="#services">Services</a></li>
+    <li><a href="#about">Our Story</a></li>
+    <li><a href="#testimonials">Testimonials</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#watch">Watch</a></li>
+  </ul>
+</nav>
+  <!-- Hero Section -->
+<!-- Hero Section -->
+<section class="hero">
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
+    <h1>Rent Our Machine</h1>
+    <p>Fix windshield chips like a pro — rent our complete repair kit and get everything you need to handle over 150 chips yourself. Simple, effective, and 100% efficient with 30 reusable molds.</p>
+    <a href="#services" class="btn hero-btn">Get Started</a>
+  </div>
+</section>
+  <!-- Services Section -->
+  <section id="services" class="section">
+    <h2>Our Services</h2>
+    <div class="cards">
+      <div class="card">
+        <h3>Basic Repair</h3>
+        <p>US$100</p>
+        <button>Book Now</button>
+      </div>
+      <div class="card">
+        <h3>Advanced Repair</h3>
+        <p>US$150</p>
+        <button>Book Now</button>
+      </div>
+      <div class="card">
+        <h3>Premium Repair</h3>
+        <p>US$200</p>
+        <button>Book Now</button>
+      </div>
+    </div>
+  </section>
 
-    <section class="hero">
-        <div class="container">
-            <h2>Feel the Chnage</h2>
-            <p>Specialized in microchip and board-level repairs</p>
-            <a href="#contact" class="btn">Get a Free Quote</a>
-        </div>
-    </section>
+  <!-- Articles Section -->
+  <section class="section articles">
+    <h2>Articles</h2>
+    <ul>
+      <li><strong>Unlock the Secrets:</strong> Professional Windshield Repair Equipment in Alberta</li>
+      <li><strong>Master Windshield Repair:</strong> Machine Rentals in Calgary</li>
+      <li><strong>Revolutionize Repairs:</strong> High-Tech Windshield Machine Rentals</li>
+    </ul>
+  </section>
 
-    <section id="services" class="section">
-        <div class="container">
-            <h2>Our Services</h2>
-            <ul class="service-list">
-                <li>📱 Phone Chip Repair</li>
-                <li>💻 Laptop Logic Board Repair</li>
-                <li>🔧 Micro Soldering</li>
-                <li>🔍 Diagnostics and Testing</li>
-            </ul>
-        </div>
-    </section>
+  <!-- Our Story Section -->
+  <section class="section about">
+    <h2>Our Story</h2>
+    <p>Chip Illusions is your reliable source for top-notch windshield repair machines. We are dedicated to providing cutting-edge solutions that elevate the standards of windshield maintenance, ensuring exceptional results for our customers.</p>
+  </section>
+  
+  <section id="watch" class="section video">
+  <h2>Watch It in Action</h2>
+  <p>See how our professional windshield repair machines work in real-time.</p>
+  <div class="video-wrapper">
+    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID"
+            title="Chip Illusions Machine Demo"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+  </div>
+</section>
 
-    <section id="about" class="section light-bg">
-        <div class="container">
-            <h2>About ChipFix</h2>
-            <p>At ChipFix, we’re passionate about electronics. With over 10 years of experience in circuit repair, our certified technicians use precision tools and quality parts to ensure your devices work like new.</p>
-        </div>
-    </section>
+  <!-- Testimonials Section -->
+  <section class="section testimonials">
+    <h2>Client Reviews</h2>
+    <div class="testimonial">
+      <p>“The quality of the machines at Chip Illusions is unmatched, making windshield repairs a breeze.”</p>
+      <span>- Sara Jenkins</span>
+    </div>
+    <div class="testimonial">
+      <p>“Renting from Chip Illusions has saved me time and money, and the results speak for themselves.”</p>
+      <span>- Michael Chang</span>
+    </div>
+    <div class="testimonial">
+      <p>“I highly recommend Chip Illusions for anyone looking to achieve flawless windshield repairs effortlessly.”</p>
+      <span>- Linda Rodriguez</span>
+    </div>
+  </section>
 
-    <section id="contact" class="section">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <form class="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Email Address" required>
-                <textarea placeholder="Describe your issue..." required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 ChipFix. All rights reserved.</p>
-        </div>
-    </footer>
+  <!-- Contact Section -->
+  <footer class="section contact">
+    <h2>Contact Us</h2>
+    <p><strong>Phone:</strong> 123-456-7890</p>
+    <p><strong>Email:</strong> info@mysite.com</p>
+    <p><strong>Location:</strong> Calgary, AB, Canada</p>
+    <small>&copy; 2035 Chip Illusions</small>
+  </footer>
+<script src="script.js"></script>
 </body>
 </html>
