--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chip Illusions | Windshield Repair Machines</title>
   <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
   
+ <div class="top-bar">
+  <div class="top-left">
+    <span class="icon">📞</span> 123-456-7890
+  </div>
+  <div class="top-right">
+    <span class="icon">📧</span> info@chipillusions.com
+  </div>
+</div>
+
 <!-- Navigation -->
  <nav class="navbar">
-  <div class="logo">Chip Illusions</div>
-  <button class="menu-toggle" id="menuToggle">&#9776;</button>
+  <div class="navbar-top">
+    <button class="menu-toggle" id="menuToggle">&#9776;</button>
+    <div class="logo">
+      <img src="logo.png" alt="Chip Illusions Logo" class="logo-img" />
+      <span>Chip Illusions</span>
+    </div>
+  </div>
+
+  
   <ul class="nav-links" id="navLinks">
     <li><a href="#services">Services</a></li>
     <li><a href="#about">Our Story</a></li>
