--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="navbar-top">
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
     <div class="logo">
-      <img src="logo.png" alt="Chip Illusions Logo" class="logo-img" />
+      <img src="logo.PNG" alt="Chip Illusions Logo" class="logo-img" />
       <span>Chip Illusions</span>
     </div>
   </div>
