--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="navbar-top">
     <button class="menu-toggle" id="menuToggle">&#9776;</button>
     <div class="logo">
-      <img src="logo.PNG" alt="Chip Illusions Logo" class="logo-img" />
+      <img src="logo.png" alt="Chip Illusions Logo" class="logo-img" />
       <span>Chip Illusions</span>
     </div>
   </div>
@@ -42,32 +42,22 @@
 <section class="hero">
   <div class="hero-overlay"></div>
   <div class="hero-content">
+    <span class="hero-highlight">30 Days Free Trial</span>
     <h1>Rent Our Machine</h1>
     <p>Fix windshield chips like a pro — rent our complete repair kit and get everything you need to handle over 150 chips yourself. Simple, effective, and 100% efficient with 30 reusable molds.</p>
     <a href="#services" class="btn hero-btn">Get Started</a>
   </div>
 </section>
   <!-- Services Section -->
-  <section id="services" class="section">
-    <h2>Our Services</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>Basic Repair</h3>
-        <p>US$100</p>
-        <button>Book Now</button>
-      </div>
-      <div class="card">
-        <h3>Advanced Repair</h3>
-        <p>US$150</p>
-        <button>Book Now</button>
-      </div>
-      <div class="card">
-        <h3>Premium Repair</h3>
-        <p>US$200</p>
-        <button>Book Now</button>
-      </div>
-    </div>
-  </section>
+  <!-- Our Machine Section -->
+<section id="our-machine" class="section our-machine">
+  <h2>Our Machine</h2>
+  <p>This high-efficiency windshield repair machine lets you fix up to 150 chips with 30 reusable molds. Trusted by professionals for precision and speed.</p>
+  <div class="machine-image-wrapper">
+    <img src="machine.jpeg" alt="Windshield Repair Machine" class="machine-img" />
+  </div>
+</section>
+
 
   <!-- Articles Section -->
   <section class="section articles">
